<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textMainMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_menu"
            android:textSize="50dp"
            android:paddingBottom="40dp"
            android:layout_gravity="center"/>


        <Button
            android:id="@+id/buttonWorkoutTracker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/workout_tracker" />

        <Button
            android:id="@+id/buttonCalorieTracker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calorie_counter" />

        <Button
            android:id="@+id/buttonSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>