<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- Main Menu Button -->
    <Button
        android:id="@+id/buttonMainMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_menu"
        android:textSize="18sp"
        android:padding="8dp"
        android:background="@drawable/round_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"/>

    <!-- Settings Text -->
    <TextView
        android:id="@+id/textSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textSize="40sp"
        app:layout_constraintTop_toBottomOf="@id/buttonMainMenu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingBottom="40dp"/>

    <!-- Layout for Name -->
    <EditText
        android:id="@+id/editTextName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Name"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/textSettings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:padding="8dp"/>

    <!-- Layout for Age -->
    <EditText
        android:id="@+id/editTextAge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Age"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/editTextName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:padding="8dp"/>

    <!-- Layout for Weight -->
    <EditText
        android:id="@+id/editTextWeight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Weight"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@id/editTextAge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:padding="8dp"/>

    <!-- Layout for Sex -->
    <RadioGroup
        android:id="@+id/radioGroupSex"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/editTextWeight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:checkedButton="-1">

        <RadioButton
            android:id="@+id/radioButtonMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Male"
            android:textSize="18sp"/>

        <RadioButton
            android:id="@+id/radioButtonFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Female"
            android:textSize="18sp"/>
    </RadioGroup>

    <!-- Layout for Units -->
    <RadioGroup
        android:id="@+id/radioGroupUnits"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/radioGroupSex"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp">

        <RadioButton
            android:id="@+id/radioButtonImperial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Imperial"
            android:textSize="18sp"/>

        <RadioButton
            android:id="@+id/radioButtonMetric"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Metric"
            android:textSize="18sp"/>
    </RadioGroup>

    <!-- Layout for Light/Dark Mode -->
    <TextView
        android:id="@+id/modeLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/mode"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/radioGroupUnits"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <Switch
        android:id="@+id/switchDarkMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/radioGroupUnits"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:checked="false"
        android:layout_marginTop="16dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/switchDarkMode"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintHorizontal_bias="0.5">

        <!-- Clear Button -->
        <Button
            android:id="@+id/buttonClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear"
            android:textSize="20sp"
            android:background="@drawable/round_button"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="8dp"/>

        <!-- Save Button -->
        <Button
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textSize="20sp"
            android:background="@drawable/round_button"
            android:layout_marginTop="50dp"
            android:layout_marginStart="8dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
